--- a/package.json
+++ b/package.json
@@ -20,5 +20,27 @@
     "files": [
       "tests/*-test.mjs"
     ]
+  },
+  "template": {
+    "files": [
+      {
+        "merger": "Readme",
+        "pattern": "README.md",
+        "options": {
+          "badges": [
+            {
+              "name": "codecov.io",
+              "icon": "http://codecov.io/github/{{github.user}}/{{github.repo}}/coverage.svg?branch=master",
+              "url": "http://codecov.io/github/{{github.user}}/{{github.repo}}?branch=master"
+            },
+            {
+              "name": "Coverage Status",
+              "icon": "https://coveralls.io/repos/{{github.user}}/{{github.repo}}/badge.svg",
+              "url": "https://coveralls.io/r/{{github.user}}/{{github.repo}}"
+            }
+          ]
+        }
+      }
+    ]
   }
 }
