--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "ava"
   },
   "devDependencies": {
-    "ava": "3.0.0-beta.1",
+    "ava": "^2.4.0",
     "c8": "^7.0.0",
     "esm": "^3.2.25"
   },
