--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
+    "posttest": "--delete-- npm run prepare && markdown-doctest",
     "cover": "#overwrite c8 -x 'tests/**/*' --temp-directory build/tmp ava && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "test": "ava"
   },
   "devDependencies": {
+    "markdown-doctest": "--delete--",
+     
     "ava": "^2.4.0",
     "c8": "^7.0.1",
     "esm": "^3.2.25"
