--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "devDependencies": {
     "markdown-doctest": "--delete--",
-    "esm": "--selete--",
+    "esm": "--delete--",
     "ava": "^3.3.0",
     "c8": "^7.1.0"
   },
