--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
   "scripts": {
     "posttest": "--delete-- markdown-doctest && --delete-- npm run prepare",
-    "cover": "#overwrite c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "test": "#overwrite ava --timeout 2m"
   },
   "devDependencies": {
     "markdown-doctest": "--delete--",
     "esm": "--delete--",
-    "ava": "^3.3.0",
-    "c8": "^7.1.0"
+    "ava": "^3.3.0"
   },
   "ava": "--delete--",
   "template": {
-    "usedBy": [ "arlac77/npm-package-template", "arlac77/npm-package-template-esm-only" ],
-    "files": [
-      {
-        "merger": "Readme",
-        "pattern": "README.md",
-        "options": {
-          "badges": [
-            {
-              "name": "codecov.io",
-              "icon": "http://codecov.io/github/{{github.user}}/{{github.repo}}/coverage.svg?branch=master",
-              "url": "http://codecov.io/github/{{github.user}}/{{github.repo}}?branch=master"
-            },
-            {
-              "name": "Coverage Status",
-              "icon": "https://coveralls.io/repos/{{github.user}}/{{github.repo}}/badge.svg",
-              "url": "https://coveralls.io/r/{{github.user}}/{{github.repo}}"
-            }
-          ]
-        }
-      }
-    ]
+    "usedBy": [ "arlac77/npm-package-template", "arlac77/npm-package-template-esm-only" ]
   }
 }
