--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "posttest": "--delete-- markdown-doctest && --delete-- npm run prepare",
-    "test": "#overwrite ava --timeout 2m"
+    "test": "#overwrite ava --node-arguments '--experimental-modules' --timeout 2m"
   },
   "devDependencies": {
     "markdown-doctest": "--delete--",
