--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "template": {
     "usedBy": [
       "arlac77/template-coverage",
-      "arlac77/template-cli-app"
+      "arlac77/template-cli-app",
+      "arlac77/template-esm-only"
     ]
   }
 }
