--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "template": {
     "properties": {
-      "ava" : { "options" : "--timeout 2m" } 
-    }, 
+      "ava": {
+        "options": "--timeout 2m"
+      }
+    },
     "usedBy": [
+      "arlac77/svelte-guard-history-router",
       "arlac77/template-coverage",
-      "arlac77/template-node-component",
-      "arlac77/template-esm-only"
+      "arlac77/template-esm-only",
+      "arlac77/template-node-component"
     ]
   }
 }
