--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "ava {{ava.options}}"
+    "test": "npm run test:ava",
+    "test:ava": "ava {{ava.options}} tests/*.mjs"
   },
   "devDependencies": {
     "ava": "^3.13.0"
