--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "npm run test:ava",
+    "test": "--overwrite-- npm run test:ava",
     "test:ava": "ava {{ava.options}} tests/*.mjs"
   },
   "devDependencies": {
