--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "npm run test:ava",
-    "test:ava": "ava {{ava.options}} tests/*.mjs"
+    "test:ava": "ava {{ava.options}} {{ava.tests}}"
   },
   "devDependencies": {
     "ava": "^3.13.0"
@@ -9,7 +9,8 @@
   "template": {
     "properties": {
       "ava": {
-        "options": "--timeout 2m"
+        "options": "--timeout 2m",
+        "tests": "tests/*.mjs"
       }
     },
     "usedBy": [
