--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "usedBy": [
       "arlac77/template-ava-coverage",
       "arlac77/template-esm-only",
-      "arlac77/template-node-component"
+      "arlac77/template-node-component",
+      "konsumation/konsum-frontend-svelte"
     ]
   }
 }
