--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       }
     },
     "usedBy": [
+      "arlac77/svelte-command",
       "arlac77/svelte-common",
       "arlac77/template-ava-coverage",
       "arlac77/template-esm-only",
