fis: use template-javascript

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       }
     },
     "inheritFrom": [
-      "arlac77/template-javascript",
+      "arlac77/template-javascript"
     ],
     "usedBy": [
       "arlac77/svelte-command",
