--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "usedBy": [
       "arlac77/svelte-command",
       "arlac77/svelte-common",
+      "arlac77/svelte-websocket-store",
       "arlac77/template-ava-coverage",
       "arlac77/template-esm-only",
       "arlac77/template-node-component",
