--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "properties": {
       "ava": {
         "options": "--timeout 2m",
-        "tests": "tests/*.mjs"
+        "tests": "tests/*-ava.mjs"
       }
     },
     "inheritFrom": [
