--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "npm run test:ava",
-    "test:ava": "ava {{ava.options}} {{ava.tests}}"
+    "test:ava": "--overwrite-- ava {{ava.options}} {{ava.tests}}"
   },
   "devDependencies": {
     "ava": "^5.3.1"
